--- a/FormTest-FV.html
+++ b/FormTest-FV.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+s<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -8,7 +8,7 @@
 <meta name="description" content=" Test form FormValidator not working"/>
 <meta name="author" content="">
 
-<title>2016-2017 Elite Gymnastics Registration Form</title>
+<title>Testing Form </title>
 
 <!-- Styles -->
 <link rel="stylesheet" href="_css/normalize.css">
